...
                android:ems="2"
                android:text="@string/starting_number"
                android:includeFontPadding="true"
                android:inputType="phone"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:layout_marginLeft="0dp"
                android:cursorVisible="false"
                android:focusable="false"
...
